--- a/application/admin/view/auth/rule/index.html
+++ b/application/admin/view/auth/rule/index.html
@@ -65,7 +65,7 @@
 
         table.render({
             elem: '#rule'
-            ,height: 500
+//            ,height: 500
             ,url:"{:url('Admin/auth.rule/getRule')}"
             ,id : 'tableReload'
             ,skin:'line'
