--- a/application/admin/view/system/security.html
+++ b/application/admin/view/system/security.html
@@ -4,7 +4,7 @@
 <div class="layui-fluid">
     <div class="layui-row">
         <div class="layui-card">
-            <div class="layui-card-header">简洁风格</div>
+            <div class="layui-card-header">安全设置</div>
             <div class="layui-card-body">
                 <div class="layui-tab layui-tab-brief" lay-filter="component-tabs-brief">
                     <ul class="layui-tab-title">
@@ -53,14 +53,14 @@
                                     <div class="layui-inline">
                                          <label class="layui-form-label">用户登录密码错误</label>
                                         <div class="layui-input-inline">
-                                          <input class="layui-input" style="width: 100px;text-align: center;" type="text" name="error_count" value="{$login_limit['error_count']}">
+                                          <input class="layui-input"  type="text" name="error_count" value="{$login_limit['error_count']}">
                                         </div>
                                         <div class="layui-form-mid">次，</div>
                                     </div>
                                     <div class="layui-inline">
                                          <label class="layui-form-label">冻结账号登录</label>
                                         <div class="layui-input-inline">
-                                          <input class="layui-input" style="width: 100px;text-align: center;" type="text" name="login_time_limit" value="{$login_limit['login_time_limit']}">
+                                          <input class="layui-input"  type="text" name="login_time_limit" value="{$login_limit['login_time_limit']}">
                                          </div>
                                          <div class="layui-form-mid">分钟</div>
                                     </div>
