--- a/application/admin/view/auth/admin/index.html
+++ b/application/admin/view/auth/admin/index.html
@@ -2,8 +2,40 @@
 {block name="content"}
 <body>
 <div class="layui-fluid">
-    <div class="layui-row layui-col-space15">
+    <div class="layui-row">
         <div class="layui-col-md12">
+            <div class="layui-card">
+                <div class="layui-card-body search-card-body">
+                    <form class="layui-form" method="get" action="">
+                        <div class="layui-form-item">
+                            <div class="layui-inline">
+                                <label class="layui-form-label">登陆账号</label>
+                                <div class="layui-input-inline">
+                                    <input type="text" name="id" placeholder="" autocomplete="off" class="layui-input">
+                                </div>
+                            </div>
+                            <div class="layui-inline">
+                                <label class="layui-form-label">昵称</label>
+                                <div class="layui-input-inline">
+                                    <input type="text" name="username" placeholder="" autocomplete="off" class="layui-input">
+                                </div>
+                            </div>
+                            <div class="layui-inline">
+                                <label class="layui-form-label">邮箱</label>
+                                <div class="layui-input-inline">
+                                    <input type="text" name="email" placeholder="" autocomplete="off" class="layui-input">
+                                </div>
+                            </div>
+                            <div class="layui-inline">
+                                <div class="layui-input-inline search-inline">
+                                    <button class="layui-btn layui-btn-sm" lay-submit="" lay-filter="component-form-element"><i class="layui-icon layui-icon-search"></i>搜索</button>
+                                    <button type="reset" class="layui-btn layui-btn-primary layui-btn-sm">重置</button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
             <div class="layui-card">
                 <div class="layui-card-body">
                     <table class="layui-hide" id="rule" lay-filter="rule" table-reload-id="tableReload"></table>
