--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -1454,3 +1454,27 @@ body .layui-layer-we .layui-layer-setwin{
   text-align: right;
   padding: 9px 15px;
 }
+.layui-table-cell {
+    height: 24px;
+    line-height: 24px;
+}
+.input-medium{
+    height: 28px;
+    line-height: 28px;
+    color: rgb(128, 128, 128);
+}
+
+.input-medium input,.input-medium .layui-form-label{
+    height: 28px;
+    line-height: 28px;
+    color: rgb(128, 128, 128);
+}
+
+.search-inline {
+    margin-left: 42px
+}
+.search-card-body{
+    padding: 20px 15px 1px 15px !important;
+    height: auto;
+    margin: auto;
+}
