--- a/application/admin/view/auth/admin/index.html
+++ b/application/admin/view/auth/admin/index.html
@@ -6,7 +6,7 @@
         <div class="layui-col-md12">
             <div class="layui-card">
                 <div class="layui-card-body search-card-body">
-                    <form class="layui-form" method="get" action="">
+                    <form class="layui-form" method="get" action="{:url('admin/auth.admin/index','',false)}" tableid="tableReload" id="formRule" lay-filter="rule">
                         <div class="layui-form-item">
                             <div class="layui-inline">
                                 <label class="layui-form-label">登陆账号</label>
@@ -28,7 +28,7 @@
                             </div>
                             <div class="layui-inline">
                                 <div class="layui-input-inline search-inline">
-                                    <button class="layui-btn layui-btn-sm" lay-submit="" lay-filter="component-form-element"><i class="layui-icon layui-icon-search"></i>搜索</button>
+                                    <button class="layui-btn layui-btn-sm search-info" type="button" lay-submit="" lay-filter="component-form-element"><i class="layui-icon layui-icon-search"></i>搜索</button>
                                     <button type="reset" class="layui-btn layui-btn-primary layui-btn-sm">重置</button>
                                 </div>
                             </div>
@@ -144,7 +144,7 @@
          * 绑定监听事件
          * */
         weTable.api.bindevent();
-
+        weTable.api.searchForm($("form#formRule"));
         //监听行工具事件
         /* table.on('tool(rule)', function(obj){
          var data = obj.data;
