--- a/application/admin/view/auth/admin/index.html
+++ b/application/admin/view/auth/admin/index.html
@@ -6,18 +6,18 @@
         <div class="layui-col-md12">
             <div class="layui-card">
                 <div class="layui-card-body search-card-body">
-                    <form class="layui-form" method="get" action="{:url('admin/auth.admin/index','',false)}" tableid="tableReload" id="formRule" lay-filter="rule">
+                    <form class="layui-form" method="post" action="{:url('admin/auth.admin/index','',false)}" tableid="tableReload" id="formRule" lay-filter="rule">
                         <div class="layui-form-item">
                             <div class="layui-inline">
                                 <label class="layui-form-label">登陆账号</label>
                                 <div class="layui-input-inline">
-                                    <input type="text" name="id" placeholder="" autocomplete="off" class="layui-input">
+                                    <input type="text" name="username" placeholder="" autocomplete="off" class="layui-input">
                                 </div>
                             </div>
                             <div class="layui-inline">
                                 <label class="layui-form-label">昵称</label>
                                 <div class="layui-input-inline">
-                                    <input type="text" name="username" placeholder="" autocomplete="off" class="layui-input">
+                                    <input type="text" name="nickname" placeholder="" autocomplete="off" class="layui-input">
                                 </div>
                             </div>
                             <div class="layui-inline">
@@ -96,7 +96,7 @@
 
         table.render({
             elem: '#rule'
-            ,height: 500
+//            ,height: 500
             ,url:"{:url('Admin/auth.admin/index')}"
             ,id : 'tableReload'
             ,skin:'line'
