修改搜索刷新两次问题

--- a/application/admin/view/auth/admin/index.html
+++ b/application/admin/view/auth/admin/index.html
@@ -96,6 +96,7 @@
 
         table.render({
             elem: '#rule'
+            ,method:'post'
 //            ,height: 500
             ,url:"{:url('Admin/auth.admin/index')}"
             ,id : 'tableReload'
