--- a/application/admin/view/auth/admin/index.html
+++ b/application/admin/view/auth/admin/index.html
@@ -38,6 +38,29 @@
                                     <!--<input type="text" name="logintime_end" placeholder="" autocomplete="off" class="layui-input">-->
                                 <!--</div>-->
                             <!--</div>-->
+
+                            <!--<div class="layui-inline">-->
+                                <!--<label class="layui-form-label">状态</label>-->
+                                <!--<div class="layui-input-inline">-->
+                                    <!--<select name="status">-->
+                                        <!--<option value="">请选择状态</option>-->
+                                        <!--<option value="1">激活</option>-->
+                                        <!--<option value="0">禁用</option>-->
+                                    <!--</select>-->
+                                <!--</div>-->
+                            <!--</div>-->
+
+                            <!--<div class="layui-inline">-->
+                                <!--<label class="layui-form-label">状态</label>-->
+                                <!--<div class="layui-input-inline">-->
+                                    <!--<select name="status">-->
+                                        <!--<option value="">请选择状态</option>-->
+                                        <!--<option value="0">禁用</option>-->
+                                        <!--<option value="1">激活</option>-->
+                                     <!--</select>-->
+                                <!--</div>-->
+                            <!--</div>-->
+
                             <!--<div class="layui-inline">-->
                                 <!--<div class="layui-input-inline search-inline">-->
                                     <!--<button class="layui-btn layui-btn-sm search-info" type="button" lay-submit="" lay-filter="component-form-element"><i class="layui-icon layui-icon-search"></i>搜索</button>-->
@@ -123,7 +146,7 @@
                 ,{field:'nickname', title: '昵称', searchList:{'type':'input'}}
                 ,{field:'groups_text', title: '角色'}
                 ,{field:'email', title: '邮箱', searchList:{'type':'input'}}
-                ,{field:'status', title: '状态',templet: '#switchStatus', sort: true}
+                ,{field:'status', title: '状态',templet: '#switchStatus', sort: true, searchList:{'type':'select','data':{'1':'激活','0':'禁用'}}}
                 ,{field:'logintime', title: '最后登陆时间', minWidth: 150, searchList:{'type':'input','event':'date'}}
                 ,{fixed: 'right', title:'操作', toolbar: '#actionbar', width:220}
             ]]
