--- a/application/admin/view/auth/admin/index.html
+++ b/application/admin/view/auth/admin/index.html
@@ -138,16 +138,17 @@
             ,id : 'tableReload'
             ,skin:'line'
             ,toolbar : '#toolbar'
+            ,limit : 4
             ,search: true
             ,cols: [[
                 {type:'checkbox', fixed: 'left',}
                 ,{field:'id', title: 'ID', sort: true}
-                ,{field:'username', title: '登陆账号', searchList:{'type':'input'}}
-                ,{field:'nickname', title: '昵称', searchList:{'type':'input'}}
+                ,{field:'username', title: '登陆账号', searchList:{type:'input',operate:'LIKE'}}
+                ,{field:'nickname', title: '昵称', searchList:{type:'input',operate:'LIKE'}}
                 ,{field:'groups_text', title: '角色'}
-                ,{field:'email', title: '邮箱', searchList:{'type':'input'}}
-                ,{field:'status', title: '状态',templet: '#switchStatus', sort: true, searchList:{'type':'select','data':{$statusList}}}
-                ,{field:'logintime', title: '最后登陆时间', minWidth: 150, searchList:{'type':'input','event':'date'}}
+                ,{field:'email', title: '邮箱', searchList:{type:'input',operate:'LIKE'}}
+                ,{field:'status', title: '状态',templet: '#switchStatus', sort: true, searchList:{type:'select',data:{$statusList},'operate':'='}}
+                ,{field:'logintime', title: '最后登陆时间', minWidth: 150, searchList:{type:'input',event:'date',operate: 'RANGE'}}
                 ,{fixed: 'right', title:'操作', toolbar: '#actionbar', width:220}
             ]]
             ,page: {
@@ -190,7 +191,7 @@
          * 绑定监听事件
          * */
         weTable.api.bindevent();
-        weTable.api.searchForm($("form#formRule"));
+        formSearch.api.searchForm($("form#formRule"));
         //监听行工具事件
         /* table.on('tool(rule)', function(obj){
          var data = obj.data;
