--- a/application/admin/view/auth/admin/index.html
+++ b/application/admin/view/auth/admin/index.html
@@ -138,7 +138,7 @@
             ,id : 'tableReload'
             ,skin:'line'
             ,toolbar : '#toolbar'
-            ,limit : 4
+//            ,limit : 4
             ,search: true
             ,cols: [[
                 {type:'checkbox', fixed: 'left',}
