--- a/application/admin/view/system/base_set.html
+++ b/application/admin/view/system/base_set.html
@@ -31,19 +31,20 @@
                             </form>
                         </div>
                         <div class="layui-tab-item">
-                            <form class="layui-form" lay-filter="component-form-element" id=""  method="POST" action="{:url('System/base_info',['type' => 2])}">
+                            <form class="layui-form" lay-filter="component-form-element" id="send_emial"  method="POST" action="{:url('System/base_info',['type' => 2])}">
                                 <div class="layui-form-item layui-col-md6">
                                     <div class="layui-row">
                                         <div class="layui-col-md3">
                                             <label class="layui-form-label">邮件发送方式</label>
                                         </div>
                                         <div class="layui-col-md9">
-                                            <select name="mail_smtp_send_type" id="mail_smtp_send_type" lay-search="" lay-verify="required">
+                                            <select name="mail_smtp_send_type" id="mail_smtp_send_type" lay-search="" data-rule="required">
                                                 <option value="">选择邮件发送方式</option>
                                                 <option value="SMTP">SMTP</option>
                                                 <option value="Mail">Mail</option>
                                             </select>
                                         </div>
+                                        <span class="msg-box n-right select-error-tips" for="mail_smtp_send_type"></span>
                                     </div>
                                 </div>
                                 <div class="layui-form-item layui-col-md6">
@@ -53,7 +54,6 @@
                                         </div>
                                         <div class="layui-col-md9">
                                             <input type="text" name="mail_smtp_host" id="mail_smtp_host" autocomplete="off" value="" data-rule="required" placeholder="" class="layui-input">
-                                            <input type="hidden" name="id" lay-verify="id" value="{$admin.id}">
                                         </div>
                                     </div>
                                 </div>
@@ -93,12 +93,13 @@
                                             <label class="layui-form-label">SMTP验证方式</label>
                                         </div>
                                         <div class="layui-col-md9">
-                                            <select name="mail_smtp_check_type" id="mail_smtp_check_type" lay-verify="required" lay-search="">
+                                            <select name="mail_smtp_check_type" id="mail_smtp_check_type" data-rule="required" lay-search="">
                                                 <option value="">选择验证方式</option>
                                                 <option value="TLS">TLS</option>
                                                 <option value="SSL">SSL</option>
                                             </select>
                                         </div>
+                                        <span class="msg-box n-right select-error-tips"  for="mail_smtp_check_type"></span>
                                     </div>
                                 </div>
                                 <div class="layui-form-item layui-col-md6">
@@ -145,7 +146,7 @@
          * 绑定表单事件
          */
         formValidator.api.bindevent($("form#password_strategy"));
-        formValidator.api.bindevent($("form#crack"));
+        formValidator.api.bindevent($("form#send_emial"));
     });
 </script>
 </body>
