--- a/application/admin/view/common/header.html
+++ b/application/admin/view/common/header.html
@@ -37,8 +37,13 @@
         </li>
         <li class="layui-nav-item layui-hide-xs" lay-unselect>
             <a href="javascript:;" layadmin-event="note">
-                <i class="layui-icon layui-icon-note"></i>
+                <i class="layui-icon layui-icon-delete"></i>
             </a>
+            <dl class="layui-nav-child clearcache">
+                <dd><a href="javascript:;" data-type="all">一键清除缓存</a></dd>
+                <dd><a href="javascript:;" data-type="content">清除缓存内容</a></dd>
+                <dd><a href="javascript:;" data-type="template">清除模板缓存</a></dd>
+            </dl>
         </li>
         <li class="layui-nav-item layui-hide-xs" lay-unselect>
             <a href="javascript:;" layadmin-event="fullscreen">
