--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -1,6 +1,6 @@
 {extend name="layout/default" /}
 {block name="content"}
-<body class="layui-layout-body">
+<body class="layui-layout-body" layadmin-themealias="green-header">
 <div id="LAY_app">
     <div class="layui-layout layui-layout-admin">
         {include file="common/header" /}
