--- a/application/admin/view/common/header.html
+++ b/application/admin/view/common/header.html
@@ -50,8 +50,8 @@
                 <cite>{$admin.nickname}</cite>
             </a>
             <dl class="layui-nav-child">
-                <dd><a lay-href="set/user/info.html">基本资料</a></dd>
-                <dd><a lay-href="set/user/password.html">修改密码</a></dd>
+                <dd><a lay-href="{:url('profile/index')}">基本资料</a></dd>
+                <dd><a lay-href="{:url('profile/index')}">修改密码</a></dd>
                 <hr>
                 <dd style="text-align: center;"><a href="{:url('index/logout')}">退出</a></dd>
             </dl>
