--- a/application/admin/view/common/tabs.html
+++ b/application/admin/view/common/tabs.html
@@ -16,7 +16,7 @@
     </div>
     <div class="layui-tab" lay-unauto lay-allowClose="true" lay-filter="layadmin-layout-tabs">
         <ul class="layui-tab-title" id="LAY_app_tabsheader">
-            <li lay-id="home/console.html" lay-attr="home/console.html" class="layui-this"><i class="layui-icon layui-icon-home"></i></li>
+            <li lay-id="home/console.html" lay-attr="home/console.html" class="layui-this">首页</li>
         </ul>
     </div>
 </div>
