--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -511,7 +511,7 @@ html {
     height: 16px;
     line-height: 16px;
     border-radius: 50%;
-    font-size: 12px
+    font-size: 12px;
 }
 
 .layadmin-pagetabs .layui-tab-title li:after {
@@ -532,14 +532,17 @@ html {
 }
 
 .layadmin-pagetabs .layui-tab-title li.layui-this, .layadmin-pagetabs .layui-tab-title li:hover {
-    background-color: #f6f6f6
+    /*background-color: #f6f6f6;*/
+    background: #2f4050;
+    color: #a7b1c2;
 }
 
 .layadmin-pagetabs .layui-tab-title li.layui-this:after {
     width: 100%;
     border: none;
     height: 2px;
-    background-color: #292B34
+    background-color: #292B34;
+    color: #ffffff;
 }
 
 .layadmin-tabspage-none .layui-layout-admin .layui-header {
@@ -560,7 +563,7 @@ html {
 }
 
 .layui-layout-admin .layui-header {
-    border-bottom: 1px solid #f6f6f6;
+    /*border-bottom: 1px solid #f6f6f6;*/
     box-sizing: border-box;
     background-color: #fff
 }
