点击操作后，下拉菜单要消失

--- a/application/admin/view/auth/admin/index.html
+++ b/application/admin/view/auth/admin/index.html
@@ -139,6 +139,7 @@
             ,skin:'line'
             ,toolbar : '#toolbar'
 //            ,limit : 4
+            ,defaultToolbar: []//'filter', 'print', 'exports'
             ,search: true
             ,cols: [[
                 {type:'checkbox', fixed: 'left',}
