--- a/application/admin/view/common/script.html
+++ b/application/admin/view/common/script.html
@@ -9,7 +9,6 @@
         ,toastr = layui.toastr
         //清除缓存
         $(document).on('click', "dl.clearcache dd a", function () {
-            $('.clearcache').hide();
             $.ajax({
                 url: clear_cache_url,
                 dataType: 'json',
@@ -17,10 +16,10 @@
                 cache: false,
                 success: function (ret) {
                     toastr.success(ret.msg);
-                    $('.clearcache').hide();
+                    $('.clearcache').removeClass('layui-show');
                 }, error: function () {
                     toastr.error('非法操作');
-                    $('.clearcache').hide();
+                    $('.clearcache').removeClass('layui-show');
                 }
             });
         });
