--- a/application/admin/view/common/header.html
+++ b/application/admin/view/common/header.html
@@ -38,6 +38,7 @@
                 <dd><a href="javascript:;" data-type="all">一键清除缓存</a></dd>
                 <dd><a href="javascript:;" data-type="content">清除缓存内容</a></dd>
                 <dd><a href="javascript:;" data-type="template">清除模板缓存</a></dd>
+                <dd><a href="javascript:;" data-type="log">清除日志缓存</a></dd>
             </dl>
         </li>
         <li class="layui-nav-item layui-hide-xs" lay-unselect>
