--- a/application/admin/view/auth/rule/index.html
+++ b/application/admin/view/auth/rule/index.html
@@ -70,7 +70,7 @@
             ,id : 'tableReload'
             ,skin:'line'
             ,toolbar : '#toolbar'
-            ,defaultToolbar: []//'filter', 'print', 'exports'
+            ,defaultToolbar: ['filter']//'filter', 'print', 'exports'
             ,cols: [[
                 {type:'checkbox', fixed: 'left'}
                 ,{field:'id', title: 'ID', sort: true}
