--- a/application/admin/view/auth/rule/index.html
+++ b/application/admin/view/auth/rule/index.html
@@ -48,30 +48,41 @@
 
 {block name="script"}
 <script>
+    var tableId = 'tableReload';
     layui.config({
         base: "__STATIC__/", //静态资源所在路径
         skin: 'layui-layer-we'
     }).extend({
         index: 'lib/index' //主入口模块
-    }).use(['index','table','element','form','authtree','we','weTable'], function(){
+    }).use(['jquery','index','table','treeGrid','element','form','authtree','we','weTable'], function(){
         var admin = layui.admin
+            ,$=layui.jquery
             ,element = layui.element
             ,table = layui.table
             ,layer = layui.layer
+            ,treeGrid = layui.treeGrid
             ,we = layui.we
             ,form = layui.form
             ,weTable = layui.weTable
             ,toastr = layui.toastr;
-        table.render({
+        treeGrid.render({
             elem: '#rule'
-//            ,height: 500
             ,url:"{:url('Admin/auth.rule/getRule')}"
             ,id : 'tableReload'
+            ,idField:'id'
+            ,treeId:'id'//树形id字段名称
+            ,treeUpId:'pid'//树形父id字段名称
+            ,treeShowName:'title'//以树形式显示的字段
+            ,iconOpen:false //是否显示图标【默认显示】
+            ,isOpenDefault:false//节点默认是展开还是折叠【默认展开】
+            ,loading:true
+            ,method:'post'
+            ,isPage:false
             ,skin:'line'
             ,toolbar : '#toolbar'
             ,defaultToolbar: ['filter']//'filter', 'print', 'exports'
             ,cols: [[
-                {type:'checkbox', fixed: 'left'}
+                {type:'checkbox',sort:true}
                 ,{field:'id', title: 'ID', sort: true}
                 ,{field:'title', title: '规则名称'}
                 ,{field:'icon', title: '图标'}
@@ -85,12 +96,27 @@
                 ,first: false //不显示首页
                 ,last: false //不显示尾页
             }
+            ,onClickRow:function (index, o) {
+                console.log(index,o,"单击！");
+            }
+            ,onDblClickRow:function (index, o) {
+                console.log(index,o,"双击");
+            }
         });
-        //监听性别操作
+
         form.on('switch(ruleStatus)', function(obj){
-//            console.log(obj);
             layer.tips(this.value + ' ' + this.name + '：'+ obj.elem.checked, obj.othis);
         });
+
+        treeGrid.on('tool('+tableId+')',function (obj) {
+            if(obj.event === 'del') {
+                del(obj);
+            } else if(obj.event === 'add') {
+                add(obj);
+            }
+        });
+
+
         /**
          * 表格初始化
          */
@@ -165,6 +191,7 @@
          };
          });*/
     });
+
 </script>
 </body>
 </html>
