--- a/application/admin/view/auth/rule/edit.html
+++ b/application/admin/view/auth/rule/edit.html
@@ -4,7 +4,7 @@
 <div class="layui-container lay_top">
     <div class="layui-row layui-col-space30">
         <div class="layui-col-xs12">
-        <form class="layui-form" action="{:url('admin/auth.rule/edit','',false)}" tableid="tableReload" method="post" lay-filter="rule" id="formRule">
+        <form class="layui-form" action="{:url('admin/auth.rule/edit','',false)}" tableid="tableReload" treegird="true" method="post" lay-filter="rule" id="formRule">
             <div class="layui-form-item">
                 <label class="layui-form-label">菜单</label>
                 <div class="layui-input-block">
