--- a/application/admin/view/push/index.html
+++ b/application/admin/view/push/index.html
@@ -3,7 +3,7 @@
 <body>
 <div class="layui-fluid">
     <div class="layui-row layui-col-space15">
-        <div class="layui-col-md12">
+        <div class="layui-col-md12 webody">
             <div class="layui-card">
                 <div class="layui-card-body">
                     <table class="layui-hide" id="rule" lay-filter="rule" table-reload-id="tableReload"></table>
