--- a/application/admin/view/system/base_set.html
+++ b/application/admin/view/system/base_set.html
@@ -2,7 +2,8 @@
 {block name="content"}
 <body>
 <div class="layui-fluid">
-    <div class="layui-row">
+    <div class="layui-row layui-col-space15">
+        <div class="layui-col-md12 webody">
         <div class="layui-card">
             <div class="layui-card-header">常规设置</div>
             <div class="layui-card-body">
@@ -112,6 +113,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </div>
 </div>
