--- a/application/admin/view/auth/admin/index.html
+++ b/application/admin/view/auth/admin/index.html
@@ -3,7 +3,7 @@
 <body>
 <div class="layui-fluid">
     <div class="layui-row">
-        <div class="layui-col-md12">
+        <div class="layui-col-md12 webody">
             <div class="layui-card">
                 <div class="layui-card-body search-card-body">
                     <!--<form class="layui-form" method="post" action="{:url('admin/auth.admin/index','',false)}" tableid="tableReload" id="formRule" lay-filter="rule">-->
