--- a/application/admin/view/profile/index.html
+++ b/application/admin/view/profile/index.html
@@ -2,7 +2,8 @@
 {block name="content"}
 <body>
 <div class="layui-fluid">
-    <div class="layui-row">
+    <div class="layui-row layui-col-space15">
+        <div class="layui-col-md12 webody">
         <div class="layui-card">
             <div class="layui-card-body">
                 <form class="layui-form" action="{:url('admin/profile/update','',false)}" tableid="tableReload" method="post" id="formRule" lay-filter="rule">
@@ -51,6 +52,7 @@
                     </div>
                 </form>
             </div>
+        </div>
         </div>
     </div>
 </div>
