--- a/application/admin/view/system/base_info.html
+++ b/application/admin/view/system/base_info.html
@@ -2,7 +2,8 @@
 {block name="content"}
 <body>
 <div class="layui-fluid">
-    <div class="layui-row">
+    <div class="layui-row layui-col-space15">
+        <div class="layui-col-md12 webody">
         <div class="layui-card">
             <div class="layui-card-header">系统基本信息</div>
             <div class="layui-card-body">
@@ -23,6 +24,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </div>
 </div>
